# Discord-LLM-Chatbot

./: .env.template  .gitignore  Makefile  README.md  README.txt  bot.py  local_bot.py  main.py  pyproject.toml  requirements.txt  run.ps1  run_local.ps1  template.env
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  goal.md
bot/: activities.py  activity_handler.py  bot.py  command_handler.py  fun_commands.py  message_handler.py
config/: config.py
discord_llm_chatbot/: main.py
discord_llm_chatbot/bot/: activities.py  activity_handler.py  bot.py  command_handler.py  fun_commands.py  message_handler.py  message_handler_pydantic.py
discord_llm_chatbot/config/: config.py
discord_llm_chatbot/utils/: logger.py  openai_client.py  text_processor.py
utils/: openai_client.py  text_processor.py
